# movierama

./: .env.dev  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pylintrc  pyproject.toml
.github/workflows/: test.yaml
accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
api/: api-docs.md  apps.py  serializers.py  urls.py  views.py
config/: settings.py  urls.py  views.py
movies/: admin.py  apps.py  models.py  movie_manager.py  persmissions.py  urls.py  views.py
movies/management/commands/: create_sample_movies.py
movies/migrations/: 0001_initial.py  0002_remove_movie_dislikes_remove_movie_likes.py  0003_movie_cover.py  0004_movie_dislikes_movie_likes.py
movies/templates/: movies_list.html
templates/movies/: base.html  delete.html  edit.html  home.html  nav-bar.html  nav-login-logout.html  new.html
templates/registration/: login.html  signup.html
tests/: utils.py
tests/integration/: test_home.py
tests/unit/api/: test_movie_detail.py  test_movie_new.py  test_movies.py
tests/unit/forms/: test_forms.py
tests/unit/movies/: test_movie_manager.py
tests/unit/web_app/: test_delete_movie.py  test_dislike_movie.py  test_home_view.py  test_like_movie.py  test_login_view.py  test_new_movie.py  test_update_movie.py  test_utils.py
tests/web_app/: test_delete_movie.py  test_home_view.py
web_app/: apps.py  forms.py  urls.py  utils.py  views.py
